force-app/main/default/objects/Branding_Content__c/Branding_Content__c.object-meta.xml
<CustomObject>
    <label>Branding &amp; Promotions</label>
    <nameField>
        <displayFormat>BC-{000}</displayFormat>
        <label>Branding Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branding &amp; Promotions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>