force-app/main/default/objects/Branding_Content__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <description>SP-4411</description>
    <label>Account Country</label>
    <type>TextArea</type>
</CustomField>