force-app/main/default/objects/Branding_Content__c/fields/Branding_kickback__c.field-meta.xml
<CustomField>
    <fullName>Branding_kickback__c</fullName>
    <description>kickbacks from Car lease/branding deals</description>
    <label>Branding kickback</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>