force-app/main/default/objects/Branding_Content__c/fields/Competitor_branding__c.field-meta.xml
<CustomField>
    <fullName>Competitor_branding__c</fullName>
    <label>Competitor branding</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Menulog / Eat Now</fullName>
            </value>
            <value>
                <fullName>Zomato</fullName>
            </value>
            <value>
                <fullName>Order Up</fullName>
            </value>
            <value>
                <fullName>Suppertime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>