force-app/main/default/objects/Branding_Content__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <description>Lease End date</description>
    <label>End-date</label>
    <type>Date</type>
</CustomField>