force-app/main/default/objects/Branding_Content__c/fields/Id_Opportunity_Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity_Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Quote Line Item</label>
    <referenceTo>Opportunity_Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Branding Content</relationshipLabel>
    <relationshipName>Branding_Content</relationshipName>
    <type>Lookup</type>
</CustomField>