force-app/main/default/objects/Branding_Content__c/fields/Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Date__c</fullName>
    <description>Date when the Branding Content was installed</description>
    <label>Installation Date</label>
    <type>Date</type>
</CustomField>