force-app/main/default/objects/Branding_Content__c/fields/Last_Branding__c.field-meta.xml
<CustomField>
    <fullName>Last_Branding__c</fullName>
    <description>SP-447
Last file date Branding</description>
    <label>Last Branding</label>
    <type>Date</type>
</CustomField>