force-app/main/default/objects/Branding_Content__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Location of the branding content</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main window</fullName>
            </value>
            <value>
                <fullName>Secondary window</fullName>
            </value>
            <value>
                <fullName>Door</fullName>
            </value>
            <value>
                <fullName>Wall</fullName>
            </value>
            <value>
                <fullName>Counter</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>