force-app/main/default/objects/Branding_Content__c/fields/Number_of_Copies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Copies__c</fullName>
    <label>Number of Copies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10K</fullName>
            </value>
            <value>
                <fullName>25K</fullName>
            </value>
            <value>
                <fullName>50K</fullName>
            </value>
            <value>
                <fullName>100K</fullName>
            </value>
            <value>
                <fullName>125K</fullName>
            </value>
            <value>
                <fullName>150K</fullName>
            </value>
            <value>
                <fullName>175K</fullName>
            </value>
            <value>
                <fullName>200K</fullName>
            </value>
            <value>
                <fullName>5K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>