force-app/main/default/objects/Branding_Content__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Branding Content</relationshipLabel>
    <relationshipName>Branding_Content</relationshipName>
    <type>Lookup</type>
</CustomField>