force-app/main/default/objects/Branding_Content__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>List_Product_Price__c.Requires_Branding__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>List_Product_Price__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>List_Product_Price__c</referenceTo>
    <relationshipLabel>Branding Content</relationshipLabel>
    <relationshipName>Branding_Content</relationshipName>
    <type>Lookup</type>
</CustomField>