force-app/main/default/objects/Branding_Content__c/fields/Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_No__c</fullName>
    <description>Car Registration number</description>
    <label>Registration No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>