force-app/main/default/objects/Branding_Content__c/fields/Restaurant_Name__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Restaurant Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Branding Content</relationshipLabel>
    <relationshipName>Branding_Content</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>