force-app/main/default/objects/Branding_Content__c/fields/Shipment_Order__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Order</label>
    <referenceTo>Shipment_Order__c</referenceTo>
    <relationshipLabel>Branding &amp; Promotions</relationshipLabel>
    <relationshipName>Branding_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>