force-app/main/default/objects/Branding_Content__c/fields/Shipment_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Order Line Item</label>
    <referenceTo>Shipment_Order_Line_Item__c</referenceTo>
    <relationshipLabel>Branding &amp; Promotions</relationshipLabel>
    <relationshipName>Branding_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>