force-app/main/default/objects/Branding_Content__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <inlineHelpText>Sticker Size</inlineHelpText>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium internal</fullName>
            </value>
            <value>
                <fullName>Medium external</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Extra Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>