force-app/main/default/objects/Branding_Content__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New - Awaiting Installation</fullName>
                <default>true</default>
                <label>New - Awaiting Installation</label>
            </value>
            <value>
                <fullName>Installed successfully</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Uninstalled</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Design rejected</fullName>
            </value>
            <value>
                <fullName>Pending final approval</fullName>
            </value>
            <value>
                <fullName>Pending design approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>