force-app/main/default/objects/Branding_Content__c/fields/Stock_Item__c.field-meta.xml
<CustomField>
    <fullName>Stock_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Item</label>
    <referenceTo>Stock_Item__c</referenceTo>
    <relationshipLabel>Branding &amp; Promotions</relationshipLabel>
    <relationshipName>Branding_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>