force-app/main/default/objects/Branding_Content__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Apron</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Blade sign</fullName>
            </value>
            <value>
                <fullName>Flagship Store</fullName>
            </value>
            <value>
                <fullName>Hats/Caps</fullName>
            </value>
            <value>
                <fullName>Heating Bag</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Menu holder</fullName>
            </value>
            <value>
                <fullName>Menu Printing</fullName>
            </value>
            <value>
                <fullName>Notepads/Pens</fullName>
            </value>
            <value>
                <fullName>Open and closed sign</fullName>
            </value>
            <value>
                <fullName>Other branded consumables</fullName>
            </value>
            <value>
                <fullName>Roofie</fullName>
            </value>
            <value>
                <fullName>Starter Package</fullName>
            </value>
            <value>
                <fullName>Sticker</fullName>
            </value>
            <value>
                <fullName>T-shirts</fullName>
            </value>
            <value>
                <fullName>White Label App</fullName>
            </value>
            <value>
                <fullName>White Label Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>