force-app/main/default/objects/Branding_Content__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>130g</fullName>
            </value>
            <value>
                <fullName>150g</fullName>
            </value>
            <value>
                <fullName>170g</fullName>
            </value>
            <value>
                <fullName>200g</fullName>
            </value>
            <value>
                <fullName>250g</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>