force-app/main/default/objects/Branding_Content__c/recordTypes/AT_Branding_Content.recordType-meta.xml
<RecordType>
    <fullName>AT_Branding_Content</fullName>
    <active>true</active>
    <label>AT Branding Content</label>
</RecordType>