force-app/main/default/objects/Branding_Content__c/recordTypes/AU_Branding_Content.recordType-meta.xml
<RecordType>
    <fullName>AU_Branding_Content</fullName>
    <active>true</active>
    <label>AU Branding Content</label>
</RecordType>