force-app/main/default/objects/Branding_Content__c/recordTypes/CD_Branding_Content.recordType-meta.xml
<RecordType>
    <fullName>CD_Branding_Content</fullName>
    <active>true</active>
    <label>CD Branding Content</label>
</RecordType>