force-app/main/default/objects/Branding_Content__c/recordTypes/CZ_Branding_Content.recordType-meta.xml
<RecordType>
    <fullName>CZ_Branding_Content</fullName>
    <active>true</active>
    <label>CZ Branding Content</label>
</RecordType>