force-app/main/default/objects/Branding_Content__c/recordTypes/DE_Branding_Content.recordType-meta.xml
<RecordType>
    <fullName>DE_Branding_Content</fullName>
    <active>true</active>
    <label>DE Branding Content</label>
</RecordType>