force-app/main/default/objects/Branding_Content__c/recordTypes/FI_Branding_Content.recordType-meta.xml
<RecordType>
    <fullName>FI_Branding_Content</fullName>
    <active>true</active>
    <label>FI Branding Content</label>
</RecordType>