force-app/main/default/objects/Branding_Content__c/recordTypes/FP_Branding_Content.recordType-meta.xml
<RecordType>
    <fullName>FP_Branding_Content</fullName>
    <active>true</active>
    <label>FP Branding Content</label>
</RecordType>