force-app/main/default/objects/Branding_Content__c/recordTypes/HU_Branding_Content.recordType-meta.xml
<RecordType>
    <fullName>HU_Branding_Content</fullName>
    <active>true</active>
    <label>HU Branding Content</label>
</RecordType>