force-app/main/default/objects/Branding_Content__c/recordTypes/PY_Branding_Content.recordType-meta.xml
<RecordType>
    <fullName>PY_Branding_Content</fullName>
    <active>true</active>
    <label>PY Branding Content</label>
</RecordType>