force-app/main/default/objects/Branding_Content__c/recordTypes/SE_Branding_Content.recordType-meta.xml
<RecordType>
    <fullName>SE_Branding_Content</fullName>
    <active>true</active>
    <label>SE Branding Content</label>
</RecordType>