force-app/main/default/objects/Branding_Content__c/recordTypes/Talabat_Branding_Content.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Branding_Content</fullName>
    <active>true</active>
    <label>Talabat Branding Content</label>
</RecordType>