force-app/main/default/objects/Branding_Content__c/recordTypes/UK_Branding_Content.recordType-meta.xml
<RecordType>
    <fullName>UK_Branding_Content</fullName>
    <active>true</active>
    <label>UK Branding Content</label>
</RecordType>