force-app/main/default/objects/Branding_Content__c/recordTypes/Yogiyo_Branding_Content.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Branding_Content</fullName>
    <active>true</active>
    <label>Yogiyo Branding Content</label>
</RecordType>