force-app/main/default/objects/Branding_Content__c/validationRules/Global_products_active_can_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Global_products_active_can_be_selected</fullName>
    <active>true</active>
    <description>only products that are active can be selected in field &quot;Product__c&quot;</description>
    <errorConditionFormula>Product__r.Is_Active__c = false</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>The product selected in the branding is inactive, please select an active product</errorMessage>
</ValidationRule>