force-app/main/default/objects/Branding_Content__c/listViews/AT_Mijam_Branding.listView-meta.xml
<ListView>
    <fullName>AT_Mijam_Branding</fullName>
    <columns>NAME</columns>
    <columns>Id_Opportunity_Quote_Line_Item__c</columns>
    <columns>Quantity__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Restaurant_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Installed successfully,Transferred</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Branding_Content__c.AT_Branding_Content</value>
    </filters>
    <label>AT - Mjam Branding</label>
    <language>en_US</language>
    <sharedTo>
        <role>AT_Account_Management</role>
        <role>AT_Customer_Care_Management</role>
        <role>AT_Customer_Care_Team</role>
        <role>AT_Management</role>
        <role>AT_Sales_Team</role>
        <role>Global_Admin</role>
        <role>Global_Management</role>
    </sharedTo>
</ListView>