force-app/main/default/objects/Branding_Content__c/listViews/CD_Mis_Barnding_Rechazados.listView-meta.xml
<ListView>
    <fullName>CD_Mis_Barnding_Rechazados</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Restaurant_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Branding_Content__c.CD_Branding_Content</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>Rejected</value>
    </filters>
    <label>CD - Mis Branding Rechazados</label>
    <language>en_US</language>
    <sharedTo>
        <group>CD_Design_Team</group>
    </sharedTo>
</ListView>