force-app/main/default/objects/Branding_Content__c/listViews/CD_Pending_design_approval_Peru.listView-meta.xml
<ListView>
    <fullName>CD_Pending_design_approval_Peru</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Restaurant_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Branding_Content__c.CD_Branding_Content</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending design approval</value>
    </filters>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>PEN</value>
    </filters>
    <label>CD - Pending design approval - Peru</label>
    <language>en_US</language>
    <sharedTo>
        <group>CD_Management</group>
    </sharedTo>
</ListView>